hphp/test/zend/good/ext/posix/tests/posix_getcwd_basic.php.skipif
<?php
if (!extension_loaded('posix')) die('skip - POSIX extension not loaded'); 
if (!function_exists('posix_getcwd')) die('skip posix_getcwd() not found');
?>