hphp/test/zend/bad/ext/posix/tests/posix_initgroups.php.skipif
<?php
if (!extension_loaded('posix')) die('skip - POSIX extension not loaded'); 
if (!function_exists('posix_initgroups')) die('skip posix_initgroups() not found');
?>